--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
